--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ if (POLICY CMP0072)
 endif()
 
 ################################################################
-set(INC_DIR ./include )
+set(INC_DIR ./include ./shader)
 include_directories(${INC_DIR})
 
 aux_source_directory(./src EXE_SRC)
@@ -35,11 +35,24 @@ if(OpenGL_FOUND)
 endif(OpenGL_FOUND)
 
 ################################################################
+if(WIN32)
+    set_target_properties(GLAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
+    set_target_properties(GLAD PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin//Debug")
+elseif(UNIX AND NOT APPLE)
+    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
+elseif(APPLE)
+    set_target_properties(GLAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
+    set_target_properties(GLAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/bin/")
+    set_target_properties(GLAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/bin/")
+endif(WIN32)
+
+################################################################
 #GLAD
 # add_subdirectory(./3rd/glad)
 add_library(GLAD ${CMAKE_SOURCE_DIR}/3rd/glad/glad.c)
 target_include_directories(GLAD PRIVATE ${CMAKE_SOURCE_DIR}/3rd/glad)
 set(LIBS ${LIBS} GLAD)
+
 
 find_package(glfw3 REQUIRED)
 if(glfw3_FOUND)
@@ -57,3 +70,53 @@ endif()
 
 ################################################################
 target_link_libraries(tinyCAD GLAD)
+
+################################################################
+if(WIN32)
+    set_target_properties(tinyCAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
+    set_target_properties(tinyCAD PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin//Debug")
+    set_target_properties(GLAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
+    set_target_properties(GLAD PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin//Debug")
+elseif(UNIX AND NOT APPLE)
+    set_target_properties(tinyCAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
+elseif(APPLE)
+    set_target_properties(tinyCAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
+    set_target_properties(tinyCAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/bin/")
+    set_target_properties(tinyCAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/bin/")
+endif(WIN32)
+
+################################################################
+# function(create_project_from_sources chapter demo)
+function(create_project_from_sources)
+
+    # copy shader files to build directory
+    file(GLOB SHADERS
+         "shader/*.vs"
+         # "src//${demo}/*.frag"
+         "shader/*.fs"
+         "shader/*.gs"
+	     "shader/*.cs"
+    )
+	# copy dlls
+	file(GLOB DLLS "dlls/*.dll")
+
+    foreach(SHADER ${SHADERS})
+        if(WIN32)
+            # configure_file(${SHADER} "test")
+            add_custom_command(TARGET tinyCAD PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SHADER} $<TARGET_FILE_DIR:tinyCAD>)
+			add_custom_command(TARGET tinyCAD PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${DLLS} $<TARGET_FILE_DIR:tinyCAD>)
+        elseif(UNIX AND NOT APPLE)
+            file(COPY ${SHADER} DESTINATION ${CMAKE_SOURCE_DIR}/bin/)
+        elseif(APPLE)
+            # create symbolic link for *.vs *.fs *.gs
+            get_filename_component(SHADERNAME ${SHADER} NAME)
+            makeLink(${SHADER} ${CMAKE_SOURCE_DIR}/bin/${SHADERNAME} tinyCAD)
+        endif(WIN32)
+    endforeach(SHADER)
+    # if compiling for visual studio, also use configure file for each project (specifically to set up working directory)
+    if(MSVC)
+        configure_file(${CMAKE_SOURCE_DIR}/configuration/visualstudio.vcxproj.user.in ${CMAKE_CURRENT_BINARY_DIR}/tinyCAD.vcxproj.user @ONLY)
+    endif(MSVC)
+endfunction()
+
+create_project_from_sources()
