添加 google log 日志功能

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,38 +56,44 @@ elseif(APPLE)
     set_target_properties(GLAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/bin/")
 endif(WIN32)
 
-################################################################
+#################### GLAD #################################
 #GLAD
 # add_subdirectory(./3rd/glad)
 include_directories(${CMAKE_SOURCE_DIR}/includes)
 add_library(GLAD ${CMAKE_SOURCE_DIR}/3rd/glad/glad.c)
 target_include_directories(GLAD PRIVATE ${CMAKE_SOURCE_DIR}/3rd/)
 set(LIBS ${LIBS} GLAD)
+target_link_libraries(tinyCAD  GLAD)
 
+################### GLFW3 #################################
 find_package(glfw3 CONFIG REQUIRED)
 # find_package(glfw3 REQUIRED)
 if(glfw3_FOUND)
     message(STATUS  " -----glfw3_FOUND")
     #target_link_libraries(tinyCAD ${glfw_LIBRARIES})
     target_link_libraries(tinyCAD glfw)
-    # target_link_libraries(testGL glfw)
 endif()
 
+################## GLEW ####################################
 find_package(GLEW REQUIRED)
 if (GLEW_FOUND)
     message(STATUS  " -----GLEW_FOUND")
     #include_directories(${GLEW_INCLUDE_DIRS})
-    target_link_libraries(tinyCAD ${GLEW_LIBRARIES})
-    # target_link_libraries(testGL ${GLEW_LIBRARIES})
+    target_link_libraries(tinyCAD  ${GLEW_LIBRARIES})
     # target_link_libraries(tinyCAD PRIVATE GLEW::GLEW)
     # target_link_libraries(tinyCAD PRIVATE glfw)
 endif()
 
-################################################################
-target_link_libraries(tinyCAD GLAD)
-# target_link_libraries(testGL GLAD)
+################# GLOG #####################################
+find_package(glog CONFIG REQUIRED)
+if(glog_FOUND)
+    message(STATUS  " -----glog_FOUND")
+    # target_link_libraries(tinyCAD PRIVATE glog::glog)
+    # target_link_libraries(tinyCAD PRIVATE ${glog_LIBRARIES})
+    target_link_libraries(tinyCAD  glog::glog)
+endif()
 
-################################################################
+################# OUPUT ######################################
 if(WIN32)
     set_target_properties(tinyCAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
     set_target_properties(tinyCAD PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin//Debug")
@@ -102,26 +108,19 @@ elseif(APPLE)
 endif(WIN32)
 
 ################################################################
-# function(create_project_from_sources chapter demo)
-function(create_project_from_sources)
+function(FILL_COPY)
 
     # copy shader files to build directory
     file(GLOB SHADERS
          "shader/*.vs"
          "shader/*.frag"
-         # "src//${demo}/*.frag"
          "shader/*.fs"
          "shader/*.gs"
 	     "shader/*.cs"
     )
-	# copy dlls
-	file(GLOB DLLS "dlls/*.dll")
 
     foreach(SHADER ${SHADERS})
         if(WIN32)
-            # configure_file(${SHADER} "test")
-            # add_custom_command(TARGET tinyCAD PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SHADER} $<TARGET_FILE_DIR:tinyCAD>)
-			# add_custom_command(TARGET tinyCAD PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${DLLS} $<TARGET_FILE_DIR:tinyCAD>)
             file(COPY ${SHADER} DESTINATION ${CMAKE_SOURCE_DIR}/bin/)
         elseif(UNIX AND NOT APPLE)
             file(COPY ${SHADER} DESTINATION ${CMAKE_SOURCE_DIR}/bin/)
@@ -131,16 +130,12 @@ function(create_project_from_sources)
             makeLink(${SHADER} ${CMAKE_SOURCE_DIR}/bin/${SHADERNAME} tinyCAD)
         endif(WIN32)
     endforeach(SHADER)
-    # if compiling for visual studio, also use configure file for each project (specifically to set up working directory)
-    # if(MSVC)
-    #     configure_file(${CMAKE_SOURCE_DIR}/configuration/visualstudio.vcxproj.user.in ${CMAKE_CURRENT_BINARY_DIR}/tinyCAD.vcxproj.user @ONLY)
-    # endif(MSVC)
 endfunction()
 
-create_project_from_sources()
+FILL_COPY()
 
 include_directories(${CMAKE_SOURCE_DIR}/includes)
 target_include_directories(tinyCAD PRIVATE ${CMAKE_SOURCE_DIR}/3rd)
-# target_include_directories(testGL PRIVATE ${CMAKE_SOURCE_DIR}/3rd)
 
+################################################################
 add_subdirectory(dashedLine)
