添加 boost 库依赖

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,8 +20,9 @@ endif()
 set(INC_DIR ./include ./shader)
 include_directories(${INC_DIR})
 
+set(APP_NAME tinyCAD)
 aux_source_directory(./src EXE_SRC)
-add_executable(tinyCAD ${EXE_SRC})
+add_executable(${APP_NAME} ${EXE_SRC})
 
 # add_executable(testGL ./test2/main2.cpp)
 
@@ -35,12 +36,12 @@ add_executable(tinyCAD ${EXE_SRC})
 #     # link_directories(${OpenGL_LIBRARY_DIRS})
 #     # message(STATUS  ${OpenGL_LIBRARY_DIRS})
 
-#     # target_link_libraries(tinyCAD ${OpenGL_LIBRARIES})
+#     # target_link_libraries(${APP_NAME} ${OpenGL_LIBRARIES})
 #     # message(STATUS  ${OpenGL_LIBRARIES}) 
     
 #     # add_definitions(${OpenGL_DEFINITIONS})
-#     target_link_libraries(tinyCAD GL)
-#     target_link_libraries(tinyCAD openGL)
+#     target_link_libraries(${APP_NAME} GL)
+#     target_link_libraries(${APP_NAME} openGL)
 # endif(OpenGL_FOUND)
 
 ################################################################
@@ -63,15 +64,15 @@ include_directories(${CMAKE_SOURCE_DIR}/includes)
 add_library(GLAD ${CMAKE_SOURCE_DIR}/3rd/glad/glad.c)
 target_include_directories(GLAD PRIVATE ${CMAKE_SOURCE_DIR}/3rd/)
 set(LIBS ${LIBS} GLAD)
-target_link_libraries(tinyCAD  GLAD)
+target_link_libraries(${APP_NAME}  GLAD)
 
 ################### GLFW3 #################################
 find_package(glfw3 CONFIG REQUIRED)
 # find_package(glfw3 REQUIRED)
 if(glfw3_FOUND)
     message(STATUS  " -----glfw3_FOUND")
-    #target_link_libraries(tinyCAD ${glfw_LIBRARIES})
-    target_link_libraries(tinyCAD glfw)
+    #target_link_libraries(${APP_NAME} ${glfw_LIBRARIES})
+    target_link_libraries(${APP_NAME} glfw)
 endif()
 
 ################## GLEW ####################################
@@ -79,32 +80,40 @@ find_package(GLEW REQUIRED)
 if (GLEW_FOUND)
     message(STATUS  " -----GLEW_FOUND")
     #include_directories(${GLEW_INCLUDE_DIRS})
-    target_link_libraries(tinyCAD  ${GLEW_LIBRARIES})
-    # target_link_libraries(tinyCAD PRIVATE GLEW::GLEW)
-    # target_link_libraries(tinyCAD PRIVATE glfw)
+    target_link_libraries(${APP_NAME}  ${GLEW_LIBRARIES})
+    # target_link_libraries(${APP_NAME} PRIVATE GLEW::GLEW)
+    # target_link_libraries(${APP_NAME} PRIVATE glfw)
 endif()
 
 ################# GLOG #####################################
 find_package(glog CONFIG REQUIRED)
 if(glog_FOUND)
     message(STATUS  " -----glog_FOUND")
-    # target_link_libraries(tinyCAD PRIVATE glog::glog)
-    # target_link_libraries(tinyCAD PRIVATE ${glog_LIBRARIES})
-    target_link_libraries(tinyCAD  glog::glog)
+    # target_link_libraries(${APP_NAME} PRIVATE glog::glog)
+    # target_link_libraries(${APP_NAME} PRIVATE ${glog_LIBRARIES})
+    target_link_libraries(${APP_NAME}  glog::glog)
 endif()
 
+################# Boost #####################################
+find_package(Boost REQUIRED)
+if(Boost_FOUND)
+    message(STATUS  " -----Boost_FOUND")
+ 
+    target_include_directories(${APP_NAME} PRIVATE ${Boost_INCLUDE_DIRS})
+    target_link_libraries(${APP_NAME} ${Boost_LIBRARY_DIRS})
+endif()
 ################# OUPUT ######################################
 if(WIN32)
-    set_target_properties(tinyCAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
-    set_target_properties(tinyCAD PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin//Debug")
+    set_target_properties(${APP_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
+    set_target_properties(${APP_NAME} PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin//Debug")
     set_target_properties(GLAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
     set_target_properties(GLAD PROPERTIES VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}/bin//Debug")
 elseif(UNIX AND NOT APPLE)
-    set_target_properties(tinyCAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
+    set_target_properties(${APP_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
 elseif(APPLE)
-    set_target_properties(tinyCAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
-    set_target_properties(tinyCAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/bin/")
-    set_target_properties(tinyCAD PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/bin/")
+    set_target_properties(${APP_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/bin/")
+    set_target_properties(${APP_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_SOURCE_DIR}/bin/")
+    set_target_properties(${APP_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_SOURCE_DIR}/bin/")
 endif(WIN32)
 
 ################################################################
@@ -127,7 +136,7 @@ function(FILL_COPY)
         elseif(APPLE)
             # create symbolic link for *.vs *.fs *.gs
             get_filename_component(SHADERNAME ${SHADER} NAME)
-            makeLink(${SHADER} ${CMAKE_SOURCE_DIR}/bin/${SHADERNAME} tinyCAD)
+            makeLink(${SHADER} ${CMAKE_SOURCE_DIR}/bin/${SHADERNAME} ${APP_NAME})
         endif(WIN32)
     endforeach(SHADER)
 endfunction()
@@ -135,7 +144,7 @@ endfunction()
 FILL_COPY()
 
 include_directories(${CMAKE_SOURCE_DIR}/includes)
-target_include_directories(tinyCAD PRIVATE ${CMAKE_SOURCE_DIR}/3rd)
+target_include_directories(${APP_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/3rd)
 
 ################################################################
 add_subdirectory(dashedLine)
