线宽正常显示 及 代码整理

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -147,4 +147,4 @@ include_directories(${CMAKE_SOURCE_DIR}/includes)
 target_include_directories(${APP_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/3rd)
 
 ################################################################
-add_subdirectory(dashedLine)
+# add_subdirectory(dashedLine)
